--- a/public/layouts.html
+++ b/public/layouts.html
@@ -21,7 +21,7 @@
 	<ul>
 		<li><a href="#">Reddit</a></li>
 		<li><a href="#">Facebook</a></li>
-		<li><a href="#">Some fucking shit</a></li>
+		<li><a href="#">Something</a></li>
 	</ul>
 </aside>
 
