--- a/public/grid.html
+++ b/public/grid.html
@@ -4,6 +4,20 @@
 	<title>Grids Exercise</title>
 </head>
 <body>
+<main id="container">
+	<div class="row">
+		<div class="col half">1/2</div>
+		<div class="col half">1/2</div>
+	</div>
+	<div class="row">
+		<div class="col third">1/3</div>
+		<div class="col third">1/3</div>
+		<div class="col third">1/3</div>
+	</div>
+
+</main>
+
+
 
 </body>
 </html>
