--- a/public/grid.html
+++ b/public/grid.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="/css/grid.css">
 </head>
 <body>
-<main id="container">
+<div class="container">
 	<div class="row">
 		<div class="col half">1/2</div>
 		<div class="col half">1/2</div>
@@ -14,9 +14,24 @@
 		<div class="col third">1/3</div>
 		<div class="col third">1/3</div>
 		<div class="col third">1/3</div>
+	</div>
+	<div class="row">
+		<div class="col fourth">1/4</div>
+		<div class="col fourth">1/4</div>
+		<div class="col fourth">1/4</div>
+		<div class="col fourth">1/4</div>
+	</div>
+	<div class="row">
+		<div class="col sixth">1/6</div>
+		<div class="col sixth">1/6</div>
+		<div class="col sixth">1/6</div>
+		<div class="col sixth">1/6</div>
+		<div class="col sixth">1/6</div>
+		<div class="col sixth">1/6</div>
 	</div>
 
-</main>
+
+</div>
 
 
 
