added column, and color

--- a/public/grid.html
+++ b/public/grid.html
@@ -29,7 +29,16 @@
 		<div class="col sixth">1/6</div>
 		<div class="col sixth">1/6</div>
 	</div>
-
+	<div class="row">
+		<div class="col eighth">1/8</div>
+		<div class="col eighth">1/8</div>
+		<div class="col eighth">1/8</div>
+		<div class="col eighth">1/8</div>
+		<div class="col eighth">1/8</div>
+		<div class="col eighth">1/8</div>
+		<div class="col eighth">1/8</div>
+		<div class="col eighth">1/8</div>
+	</div>
 
 </div>
 
