--- a/public/grid.html
+++ b/public/grid.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>Grids Exercise</title>
+	<link rel="stylesheet" type="text/css" href="/css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="/css/grid.css">
 </head>
 <body>
