--- a/public/grid.html
+++ b/public/grid.html
@@ -76,8 +76,7 @@
 		<div class="col twothird">2/3</div>
 	</div>
 	<div class="row">
-		<div class="offset-half"></div>
-		<div class="col threeeighth">3/8</div>
+		<div class="col threeeighth offset-half">3/8</div>
 	</div>
 </div>
 
