--- a/public/functions_js.html
+++ b/public/functions_js.html
@@ -11,7 +11,7 @@ var myNameIs = 'Justin'; // todo: Fill in your name here.
 // Create a function called 'sayHello' that takes a parameter 'name'.
 // When called, the function should log a message that says hello from the passed in name.
 function sayHello(name) {
-	console.log(name + ': hello.')
+	console.log(name + ': hello.');
 }
 // todo: Call the function 'sayHello' passing the variable 'myNameIs' as a parameter.
 sayHello(myNameIs);
@@ -24,11 +24,10 @@ var random = Math.floor((Math.random()*100)+1);
 // The function should use the ternary operator to log a message.
 // The log should tell the number passed in and whether it is odd or not.
 function isOdd(number) {
-	var number = number % 2 == 1 ? console.log(number + " is odd!") : console.log(number + " is even!") 
+	var number = number % 2 == 1 ? console.log(number + " is odd!") : console.log(number + " is even!");
 }
 // todo: Call the function 'isOdd' passing the variable 'random' as a parameter.
 isOdd(random);
 </script>
-
 </body>
 </html>
