--- a/public/dom_query_js.html
+++ b/public/dom_query_js.html
@@ -22,21 +22,29 @@
         pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
         culpa qui officia deserunt mollit anim id est laborum.
     </p>
-
+	<button id="mainHeaderBtn">Change the Main Header</button>
+    <button id="subHeaderBtn">Change the Sub Header</button>
+    <button id="listBtn">Change the List</button>
+    <button id="pBtn">Change the Paragraph</button>
     <script>
     	"use strict";
         // todo: get the main header element by id
         var mainHeader = document.getElementById('main-header');
         // todo: set inner html of mainHeader to "JavaScript is Cool"
+        var changeMainHeader = function (event) {
         mainHeader.innerHTML = 'JavaScript is Cool';
+   		}
         // todo: get the sub header element by id
         var subHeader = document.getElementById('sub-header');
         // todo: set the text color of subHeader to blue
+        var changeSubHeader = function (event) {
         subHeader.style['color'] = 'blue';
+    	}
         // todo: get all list items
         var listItems = document.getElementsByTagName('li');
         // todo: set text color on every other list item to grey
         // todo: set text color of li with dbid = 1 to blue
+        var changeList = function (event) {
         for (var x = 0; x < listItems.length; x++) {
         	var dbId = listItems[x].attributes['data-dbid'].value;
         	if (dbId == 1) {
@@ -46,11 +54,24 @@
         		listItems[x].style['color'] = 'grey';
         	}
         }
+    	}
+    	
         // todo: get all elements with class name sub-paragraph
         var subParagraphs = document.getElementsByClassName('sub-paragraph');
         // todo: change the text in the first sub paragraph to "Mission Accomplished!"
+        var changeP = function (event) {
         subParagraphs.innerHTML = 'Mission Accomplished!';
+    	}
 
+
+    	var mainHeaderBtn = document.getElementById('mainHeaderBtn');
+    	mainHeaderBtn.addEventListener('click', changeMainHeader, false);
+    	var subHeaderBtn = document.getElementById('subHeaderBtn');
+    	subHeaderBtn.addEventListener('click', changeSubHeader, false);
+    	var listBtn = document.getElementById('listBtn');
+    	listBtn.addEventListener('click', changeList, false);
+    	var pBtn = document.getElementById('pBtn');
+    	pBtn.addEventListener('click', changeP, false);
         //Could not get getElementsByClassName to function properly.
 
 
