--- a/public/dom_query_js.html
+++ b/public/dom_query_js.html
@@ -57,12 +57,17 @@
     	}
     	
         // todo: get all elements with class name sub-paragraph
-        var subParagraphs = document.getElementsByClassName('sub-paragraph');
+        var subParagraphs = document.querySelector('.sub-paragraph');
         // todo: change the text in the first sub paragraph to "Mission Accomplished!"
-        var changeP = function (event) {
+        var interval = 400
+        var changeP = function() {
+        setInterval(function () {
         subParagraphs.innerHTML = 'Mission Accomplished!';
-    	}
-
+            for (var a = 0; a > subParagraphs.length; a++) {
+                subParagraphs.charAt(a).style['color'] = 'red';
+            }
+    	}, interval);
+}
 
     	var mainHeaderBtn = document.getElementById('mainHeaderBtn');
     	mainHeaderBtn.addEventListener('click', changeMainHeader, false);
