--- a/public/objects_json_js.html
+++ b/public/objects_json_js.html
@@ -10,8 +10,7 @@ var books = [{
 	"title": "House of Leaves" ,
 		"author" : {
 			"first" : "Mark" ,
-			"last" : "Danielewski"
-		},
+			"last" : "Danielewski" }
 	},
 	{ "title": "A Game of Thrones" ,
 		"author" : {
