--- a/public/objects_math_js.html
+++ b/public/objects_math_js.html
@@ -9,17 +9,18 @@
 var circle = {
     radius: 3,
     getArea: function () {
-    var area = Math.PI * Math.pow(circle.radius, 2);
+    var area = Math.PI * Math.pow(this.radius, 2);
         // todo: finish this method
         // hint: area = pi * radius^2
         return area; // todo: return data
     },
     logInfo: function (round) {
         // todo: complete this method. if round is true, round the result to the nearest integer.
-        if (round == true) {
-        var area = Math.round(circle.getArea());
-        console.log('Area of a circle with radius: ' + this.radius + ', is: ' + area);
+        if (round) {
+        var area = Math.round(this.getArea());
     }
+        console.log('Area of a circle with radius: ' + this.radius + ', is: ' + area);
+    
 }
 }
 
@@ -29,7 +30,7 @@ circle.logInfo(true);
 
 // todo:
 // Change the radius of the circle to 5.
-circle.radius = 5
+circle.radius = 12
 // log info about the circle
 circle.logInfo(false);
 circle.logInfo(true);
