--- a/public/calculator.html
+++ b/public/calculator.html
@@ -9,7 +9,7 @@
 <div id="calculator">
 	<!-- Screen -->
 <div class="top">
-	<div class="screen"></div>
+	<div id="screen"></div>
 </div>
 	<!-- Functionality keys of Calculator -->
 <div class="keys">
