--- a/public/google_maps_api.html
+++ b/public/google_maps_api.html
@@ -37,7 +37,7 @@ var styles = [
   {
     "elementType": "geometry",
     "stylers": [
-      { "hue": "#ff0000" },
+      { "hue": "#ff0000" }, //This turns the map RED
       { "visibility": "on" },
       { "gamma": 0.1 },
       { "saturation": -2 }
